{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 19,
  "lineage": "99e334ba-ee26-d849-1342-7229798e312b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-035d3065ff6e6c831",
            "domain": "vpc",
            "id": "eipalloc-035d3065ff6e6c831",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-221-15-36.compute-1.amazonaws.com",
            "public_ip": "3.221.15.36",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo-wordpress-02-rt-private",
              "Owner": "demo-wordpress-02"
            },
            "tags_all": {
              "Name": "demo-wordpress-02-rt-private",
              "Owner": "demo-wordpress-02"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:870146496188:instance/i-08546699321c35d1d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08546699321c35d1d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo-wordpress",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0da649ede4d1ae4e3",
            "private_dns": "ip-10-0-2-211.ec2.internal",
            "private_ip": "10.0.2.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d626b9d77f3d3667",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a41652258f9267c9",
            "tags": {
              "KeepInstanceRunning": "false",
              "Name": "demo-wordpress-02-instance-private",
              "Owner": "demo-wordpress-02"
            },
            "tags_all": {
              "KeepInstanceRunning": "false",
              "Name": "demo-wordpress-02-instance-private",
              "Owner": "demo-wordpress-02"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02b637fd616556c38"
            ]
          },
          "dependencies": [
            "aws_key_pair.demo_key",
            "aws_security_group.private",
            "aws_subnet.subnet-private",
            "aws_vpc.vpc",
            "tls_private_key.demo_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:870146496188:instance/i-0b1361e3f4ba05187",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b1361e3f4ba05187",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo-wordpress",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dc083edc2bdd32ab",
            "private_dns": "ip-10-0-1-232.ec2.internal",
            "private_ip": "10.0.1.232",
            "public_dns": "ec2-34-200-217-225.compute-1.amazonaws.com",
            "public_ip": "34.200.217.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09ef5e0aa87526ede",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0625d3760586c37c3",
            "tags": {
              "KeepInstanceRunning": "false",
              "Name": "demo-wordpress-02-instance-public",
              "Owner": "demo-wordpress-02"
            },
            "tags_all": {
              "KeepInstanceRunning": "false",
              "Name": "demo-wordpress-02-instance-public",
              "Owner": "demo-wordpress-02"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b2fd51edd7bee156"
            ]
          },
          "dependencies": [
            "aws_key_pair.demo_key",
            "aws_security_group.public",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc",
            "tls_private_key.demo_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870146496188:internet-gateway/igw-0e5a153da608502c9",
            "id": "igw-0e5a153da608502c9",
            "owner_id": "870146496188",
            "tags": {
              "Name": "demo-wordpress-02-igw",
              "Owner": "demo-wordpress-02"
            },
            "tags_all": {
              "Name": "demo-wordpress-02-igw",
              "Owner": "demo-wordpress-02"
            },
            "vpc_id": "vpc-0b2219c2cd4976137"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-035d3065ff6e6c831",
            "connectivity_type": "public",
            "id": "nat-0e749c068fd9558d3",
            "network_interface_id": "eni-0fb37560cc9fe0caa",
            "private_ip": "10.0.1.217",
            "public_ip": "3.221.15.36",
            "subnet_id": "subnet-0625d3760586c37c3",
            "tags": {
              "Name": "demo-wordpress-02-rt-private",
              "Owner": "demo-wordpress-02"
            },
            "tags_all": {
              "Name": "demo-wordpress-02-rt-private",
              "Owner": "demo-wordpress-02"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870146496188:route-table/rtb-0e86202b98b448277",
            "id": "rtb-0e86202b98b448277",
            "owner_id": "870146496188",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "demo-wordpress-02-rt-private",
              "Owner": "demo-wordpress-02"
            },
            "tags_all": {
              "Name": "demo-wordpress-02-rt-private",
              "Owner": "demo-wordpress-02"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2219c2cd4976137"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870146496188:route-table/rtb-01da8e7aa637b22e0",
            "id": "rtb-01da8e7aa637b22e0",
            "owner_id": "870146496188",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "demo-wordpress-02-rt-public",
              "Owner": "demo-wordpress-02"
            },
            "tags_all": {
              "Name": "demo-wordpress-02-rt-public",
              "Owner": "demo-wordpress-02"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2219c2cd4976137"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_sbn_private_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df8317c914f2b2da",
            "route_table_id": "rtb-0e86202b98b448277",
            "subnet_id": "subnet-0a41652258f9267c9"
          },
          "dependencies": [
            "aws_route_table.rt-private",
            "aws_subnet.subnet-private",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_sbn_public_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0518b66e8c4374b61",
            "route_table_id": "rtb-01da8e7aa637b22e0",
            "subnet_id": "subnet-0625d3760586c37c3"
          },
          "dependencies": [
            "aws_route_table.rt-public",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870146496188:security-group/sg-02b637fd616556c38",
            "description": "Public internet access",
            "egress": [],
            "id": "sg-02b637fd616556c38",
            "ingress": [],
            "name": "private-sg",
            "name_prefix": "",
            "owner_id": "870146496188",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Name": "private-sg"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2219c2cd4976137"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870146496188:security-group/sg-0b2fd51edd7bee156",
            "description": "Public internet access",
            "egress": [],
            "id": "sg-0b2fd51edd7bee156",
            "ingress": [],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "870146496188",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Name": "public-sg"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2219c2cd4976137"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3347044740",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02b637fd616556c38",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.private",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2511162627",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b2fd51edd7bee156",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870146496188:subnet/subnet-0a41652258f9267c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a41652258f9267c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "870146496188",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-wordpress-02-subnet",
              "Owner": "demo-wordpress-02"
            },
            "tags_all": {
              "Name": "demo-wordpress-02-subnet",
              "Owner": "demo-wordpress-02"
            },
            "vpc_id": "vpc-0b2219c2cd4976137"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870146496188:subnet/subnet-0625d3760586c37c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0625d3760586c37c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "870146496188",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-wordpress-02-subnet",
              "Owner": "demo-wordpress-02"
            },
            "tags_all": {
              "Name": "demo-wordpress-02-subnet",
              "Owner": "demo-wordpress-02"
            },
            "vpc_id": "vpc-0b2219c2cd4976137"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870146496188:vpc/vpc-0b2219c2cd4976137",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a09f53649f769116",
            "default_route_table_id": "rtb-061127da0fbdc1896",
            "default_security_group_id": "sg-05d04f77a66253363",
            "dhcp_options_id": "dopt-04b748af150248b28",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b2219c2cd4976137",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-061127da0fbdc1896",
            "owner_id": "870146496188",
            "tags": {
              "Name": "demo-wordpress-02-vpc",
              "Owner": "demo-wordpress-02"
            },
            "tags_all": {
              "Name": "demo-wordpress-02-vpc",
              "Owner": "demo-wordpress-02"
            }
          }
        }
      ]
    }
  ]
}